# software-testing-learning

./: .gitignore  .pre-commit-config.yaml  README.md  go.mod  go.sum  justfile  main.go  pyproject.toml
.github/: pull_request_template.md
.github/actions/setup-workspace/: action.yaml
.github/workflows/: linting.yaml  testing.yaml
automotive/: automotive.go  automotive_test.go
logging/: logging.go  logging_test.go
system_under_test/: __init__.py  errors.py  software.py
tests/: test_signal.py  test_software.py
tests/bdd/: __init__.py  environment.py
tests/bdd/features/: signals.feature
tests/bdd/shared/: __init__.py  stubs.py
tests/bdd/steps/: __init__.py  signal_steps.py
