[tool.poetry]
name = "software-testing-learning"
version = "0.0.1"
description = "Playground space for Python-based TDD and practice"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
behave = "^1.2.6"

[tool.poetry.group.dev.dependencies]
poetry = "^2.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
